--- a/web/index.html
+++ b/web/index.html
@@ -45,8 +45,7 @@
       <ion-icon onclick="showQRCode(false)" name="close-outline"></ion-icon>
       <div id="qr-container" class="qr-container">
       </div>
-      <h3>This is your example QR Code.</h3>
-      <h4>Use this wisely! or something</h4>
+      <h3>Scan this QR Code for your Mobile shopping list.</h3>
     </div>
     <div class="title">
       <ion-icon name="chevron-back-outline" onclick="handleMonthOffset(-1)"></ion-icon>
