nevermind. let me rephrase

--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
       <div id="qr-container" class="qr-container">
       </div>
       <h3>Your QR code is ready!</h3>
-      <h4>Scan this QR Code for your Mobile shopping list.</h4>
+      <h4>Scan to view your Mobile shopping list.</h4>
     </div>
     <div class="title">
       <ion-icon name="chevron-back-outline" onclick="handleMonthOffset(-1)"></ion-icon>
