--- a/web/index.html
+++ b/web/index.html
@@ -191,6 +191,10 @@
       <div class="flex-row justify-center">
         <button class="qrGenBtn" onclick="showQRCode(true)">Generate Mobile QR Code</button>
       </div>
+      <div class="flex-row justify-center" id="outdated-warning" style="align-items: center; gap: 5px; display: none;">
+        <ion-icon name="alert-circle-outline"></ion-icon>
+        <h4 class="nomargin">This List May Be Outdated</h4>
+      </div>
       <div class="shoppingListBorder">
         <div class="shoppingList" id="ingredient-list">
           <div class="ingredient flex-row i-template" id="i-template">
