--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -24,12 +24,196 @@
                 return { item_name, quantity };
             });
         }
-
     </script>
+    <style>
+        body,
+        html {
+            padding: 0;
+            margin: 0;
+        }
+
+        .timeframe-form {
+            background-color: #a0a0a01e;
+            border-radius: 5px;
+            padding: 10px;
+            box-sizing: border-box;
+            border: 1px solid rgba(119, 119, 119, 0.5);
+        }
+
+        .timeframe-form .flex-row {
+            justify-content: space-between;
+            gap: 10px;
+            align-items: center;
+        }
+
+        .timeframe-form h3 {
+            margin: 0;
+        }
+
+        .timeframe-form select {
+            flex: 1;
+            border-radius: 5px;
+            height: 30px;
+            font-family: Lato;
+            font-weight: 600;
+        }
+
+        .shoppingList {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            gap: 5px;
+        }
+
+        .shoppingList h3,
+        .shoppingList h4 {
+            margin: 0;
+        }
+
+        .listGenBtn {
+            width: 100%;
+        }
+
+        .ingredient {
+            padding: 5px 10px;
+            box-sizing: border-box;
+            border: 1px solid rgb(153, 153, 153);
+            border-radius: 1vw;
+            height: 10vh;
+            width: 100%;
+            background-color: #cbcbcb;
+            gap: 5px;
+            justify-content: space-between;
+        }
+
+        .ingredient input {
+            margin: 5px;
+            box-sizing: border-box;
+            width: 20px;
+            border: 1px solid black;
+            height: 100%;
+            max-width: 20px;
+            min-width: 20px;
+        }
+
+        .shoppingListTab {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            gap: 5px;
+        }
+
+        .shoppingListBorder {
+            border: 1px solid #acabab;
+            display: flex;
+            border-radius: 5px;
+            padding: 3vw;
+            box-sizing: border-box;
+            gap: 5px;
+            height: 100vh;
+            align-content: flex-start;
+            flex: 1 1 auto;
+            overflow-y: auto;
+        }
+
+        .list-generating {
+            filter: blur(7px);
+        }
+
+        .border-generating {
+            box-shadow: 0 0 20px 0px #00000061;
+        }
+
+        .tabs {
+            margin-top: 5px;
+            display: flex;
+            gap: 5px;
+            justify-content: center;
+        }
+
+        .check-btn {
+            width: 100px;
+            height: 25px;
+            border-radius: 5px;
+            border: 1px solid #acabab;
+            cursor: pointer;
+            transition: all .3s;
+        }
+
+        .check-btn:hover {
+            width: 110px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.11);
+        }
+
+        .check-btn:active {
+            width: 105px;
+            box-shadow: 0px 0px 6px rrgba(0, 0, 0, 0.096);
+            background-color: rgb(214, 214, 214);
+        }
+
+
+        .checkbox-div {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            justify-content: space-between;
+        }
+
+        .i-template {
+            /* display: none; */
+        }
+
+        .i-left {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .i-left i {
+            width: 20px;
+            height: 20px;
+        }
+
+        .justify-center {
+            justify-content: center;
+        }
+
+        .qrGenBtn {
+            border-radius: 5px;
+            border: 1px solid rgb(148, 148, 148);
+            padding: 5px;
+            box-sizing: border-box;
+            transition: all .3s;
+            width: 200px;
+            cursor: pointer;
+        }
+
+        .qrGenBtn:hover {
+            background-color: #dddddd;
+            width: 215px;
+        }
+    </style>
 </head>
 
 <body onload="getParams()">
-    <h3 id="element1">hi</h3>
+    <div class="shoppingListBorder">
+        <div class="shoppingList" id="ingredient-list">
+            <div class="ingredient flex-row i-template" id="i-template">
+                <div class="i-left">
+                    <span id="icon-placeholder"></span>
+                    <div>
+                        <h3 id="i-name">Ingredient</h3>
+                        <h4 id="i-amt">Ingredient Amount ( >Minimum )</h4>
+                    </div>
+                </div>
+                <div class="checkbox-div">
+                    <h4>Already Have:</h4>
+                    <input style="cursor: pointer;" type="checkbox"></input>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
