--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <title>Shopping List</title>
     <script>
         function getParams() {
             const params = new URLSearchParams(window.location.search);
@@ -30,6 +36,14 @@
         html {
             padding: 0;
             margin: 0;
+            font-family: Lato;
+        }
+
+        h2 {
+            justify-self: center;
+            font-size: 3rem;
+            margin: 1vh 0;
+            margin-bottom: 1vh;
         }
 
         .timeframe-form {
@@ -197,6 +211,7 @@
 </head>
 
 <body onload="getParams()">
+    <h2>Shopping List</h2>
     <div class="shoppingListBorder">
         <div class="shoppingList" id="ingredient-list">
             <div class="ingredient flex-row i-template" id="i-template">
