--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -40,8 +40,9 @@
         }
 
         h2 {
+            display: flex;
             justify-self: center;
-            font-size: 3rem;
+            font-size: 5rem;
             margin: 1vh 0;
             margin-bottom: 1vh;
         }
