--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -77,13 +77,28 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            height: 100%;
+            height: fit-content;
             gap: 5px;
+            padding: 5vw;
+            box-sizing: border-box;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            gap: 1vh;
         }
 
-        .shoppingList h3,
-        .shoppingList h4 {
+        h3,
+        h4 {
             margin: 0;
+            height: auto;
+            font-size: 2vw;
+        }
+
+        h3 {
+            font-size: 50px;
+        }
+
+        h4 {
+            font-size: 30px;
         }
 
         .listGenBtn {
@@ -105,31 +120,9 @@
         .ingredient input {
             margin: 5px;
             box-sizing: border-box;
-            width: 20px;
             border: 1px solid black;
-            height: 100%;
-            max-width: 20px;
-            min-width: 20px;
-        }
-
-        .shoppingListTab {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            gap: 5px;
-        }
-
-        .shoppingListBorder {
-            border: 1px solid #acabab;
-            display: flex;
-            border-radius: 5px;
-            padding: 3vw;
-            box-sizing: border-box;
-            gap: 5px;
-            height: 100vh;
-            align-content: flex-start;
-            flex: 1 1 auto;
-            overflow-y: auto;
+            height: 7vw;
+            width: 7vw;
         }
 
         .list-generating {
@@ -171,7 +164,7 @@
         .checkbox-div {
             display: flex;
             align-items: center;
-            gap: 5px;
+            gap: 3vw;
             justify-content: space-between;
         }
 
@@ -208,13 +201,32 @@
             background-color: #dddddd;
             width: 215px;
         }
+
+        .flex-row {
+            display: flex;
+        }
     </style>
 </head>
 
 <body onload="getParams()">
-    <h2>Shopping List</h2>
+    <div style="display: flex; justify-content: center;">
+        <h2>Shopping List</h2>
+    </div>
     <div class="shoppingListBorder">
         <div class="shoppingList" id="ingredient-list">
+            <div class="ingredient flex-row i-template" id="i-template">
+                <div class="i-left">
+                    <span id="icon-placeholder"></span>
+                    <div>
+                        <h3 id="i-name">Ingredient</h3>
+                        <h4 id="i-amt">Ingredient Amount ( >Minimum )</h4>
+                    </div>
+                </div>
+                <div class="checkbox-div">
+                    <h4>Already Have:</h4>
+                    <input style="cursor: pointer;" type="checkbox"></input>
+                </div>
+            </div>
             <div class="ingredient flex-row i-template" id="i-template">
                 <div class="i-left">
                     <span id="icon-placeholder"></span>
