--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -106,11 +106,11 @@
         }
 
         .ingredient {
-            padding: 5px 10px;
+            padding: 1vw 2vw;
             box-sizing: border-box;
             border: 1px solid rgb(153, 153, 153);
             border-radius: 1vw;
-            height: 10vh;
+            height: 8.5vh;
             width: 100%;
             background-color: #cbcbcb;
             gap: 5px;
