--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="CSS/sidebar/right/shoppingList.css">
 
   <script type="module" src="JS/utility.js"></script>
-
+  <link rel="icon" href="./IMG/favicon.ico">
 </head>
 
 <body>
