--- a/web/index.html
+++ b/web/index.html
@@ -45,8 +45,8 @@
       <ion-icon onclick="showQRCode(false)" name="close-outline"></ion-icon>
       <div id="qr-container" class="qr-container">
       </div>
-      <h3>Your QR code is ready!</h3>
-      <h4>Scan to view your Mobile shopping list.</h4>
+      <h3>Scan to view</h3>
+      <h4>Your Mobile Shopping List</h4>
     </div>
     <div class="title">
       <ion-icon name="chevron-back-outline" onclick="handleMonthOffset(-1)"></ion-icon>
