--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -47,6 +47,9 @@
             padding: 0;
             margin: 0;
             font-family: Lato;
+            height: 100vh;
+            background: #a9c3d4;
+            background: linear-gradient(157deg, rgba(169, 195, 212, 1) 0%, rgba(211, 235, 220, 1) 50%, rgba(255, 254, 237, 1) 100%);
         }
 
         h2 {
@@ -119,10 +122,10 @@
             padding: 1vw 2vw;
             box-sizing: border-box;
             border: 1px solid rgb(153, 153, 153);
-            border-radius: 1vw;
+            border-radius: 1.5vw;
             height: 8.5vh;
             width: 100%;
-            background-color: #cbcbcb;
+            backdrop-filter: brightness(1.15);
             gap: 5px;
             justify-content: space-between;
         }
