--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -47,10 +47,17 @@
             padding: 0;
             margin: 0;
             font-family: Lato;
-            height: 100vh;
-            background: #a9c3d4;
-            background: linear-gradient(157deg, rgba(169, 195, 212, 1) 0%, rgba(211, 235, 220, 1) 50%, rgba(255, 254, 237, 1) 100%);
+            height: 100%;
         }
+
+        body {
+            min-height: 100vh;
+            background: linear-gradient(157deg, rgba(169, 195, 212, 1) 0%, rgba(211, 235, 220, 1) 50%, rgba(255, 254, 237, 1) 100%);
+            background-attachment: fixed;
+            background-size: 100% 100vh;
+            background-repeat: no-repeat;
+        }
+
 
         h2 {
             display: flex;
