--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -46,17 +46,25 @@
         html {
             padding: 0;
             margin: 0;
-            font-family: Lato;
+            font-family: Lato, sans-serif;
             height: 100%;
+            position: relative;
         }
 
-        body {
-            min-height: 100vh;
-            background: linear-gradient(157deg, rgba(169, 195, 212, 1) 0%, rgba(211, 235, 220, 1) 50%, rgba(255, 254, 237, 1) 100%);
-            background-attachment: fixed;
-            background-size: 100% 100vh;
-            background-repeat: no-repeat;
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: -1;
+            background: linear-gradient(157deg,
+                    rgba(169, 195, 212, 1) 0%,
+                    rgba(211, 235, 220, 1) 50%,
+                    rgba(255, 254, 237, 1) 100%);
         }
+
 
 
         h2 {
