change margins or smth

--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -149,7 +149,8 @@
             margin: 5px;
             box-sizing: border-box;
             border: 1px solid black;
-            height: 7vw;
+            min-height: 7vw;
+            max-height: fit-content;
             width: 7vw;
         }
 
