--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -138,7 +138,8 @@
             box-sizing: border-box;
             border: 2px solid rgb(77, 77, 77);
             border-radius: 1.5vw;
-            height: 8.5vh;
+            min-height: 8.5vh;
+            height: fit-content;
             width: 100%;
             backdrop-filter: brightness(1.15);
             gap: 5px;
@@ -149,8 +150,7 @@
             margin: 5px;
             box-sizing: border-box;
             border: 1px solid black;
-            min-height: 7vw;
-            max-height: fit-content;
+            height: 7vw;
             width: 7vw;
         }
 
@@ -247,7 +247,7 @@
 <body onload="getParams()">
     <div class="header">
         <h2>Shopping List</h2>
-        <h4>Mark if you have these items:</h4>
+        <h4>Mark if you have/need these items:</h4>
     </div>
     <div class="shoppingListBorder">
         <div class="shoppingList" id="ingredient-list">
