--- a/web/index.html
+++ b/web/index.html
@@ -194,7 +194,7 @@
       </div>
 
       <div class="flex-row justify-center">
-        <button class="qrGenBtn" onclick="showQRCode(true)">Generate Mobile QR Code</button>
+        <button class="button qrGenBtn" onclick="showQRCode(true)">Generate Mobile QR Code</button>
       </div>
       <div class="flex-row justify-center" id="outdated-warning" style="align-items: center; gap: 5px; display: none;">
         <ion-icon name="alert-circle-outline"></ion-icon>
