whats up fellas (colors!!!)

--- a/web/index.html
+++ b/web/index.html
@@ -124,7 +124,7 @@
             placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the recipe book on the left sidebar."></textarea>
           <h3 style="margin: 5px 0 5px 0">Recipe Image (Optional)</h3>
           <textarea type="text" class="recipe-img-box" id="recipeimgbox" name="rdesc"
-            placeholder="If you want, paste a link to an image of the recipe here."></textarea>
+            placeholder="If you want, paste a (valid) IMAGE link of the recipe here."></textarea>
           <button class="gen-btn button" id="gen-btn" onclick="genRecipe()">generate recipe</button>
         </div>
       </div>
