--- a/web/index.html
+++ b/web/index.html
@@ -226,7 +226,7 @@
           <h4 style="margin: -8px 0 -2px 0;">All other colors will be automatically generated</h4>
           <div class="flex-row">
             <input type="color" value="#ff6bc1" id="primary-color">
-            <h3>Background color shift</h3>
+            <h3>Main color shift</h3>
           </div>
           <div class="flex-row">
             <input type="color" id="text-color" value="">
