cahnge numbah three shousant seven hundred sixty two

--- a/web/index.html
+++ b/web/index.html
@@ -226,11 +226,11 @@
           <h4 style="margin: -8px 0 -2px 0;">All other colors will be automatically generated</h4>
           <div class="flex-row">
             <input type="color" value="#ff6bc1" id="primary-color">
-            <h3>Main color shift</h3>
+            <h3>Theme</h3>
           </div>
           <div class="flex-row">
             <input type="color" id="text-color" value="">
-            <h3>Global Text Color</h3>
+            <h3>Text Color</h3>
           </div>
         </div>
       </div>
