--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <title>Food Calendar</title>
+  <title>My Meal Plan</title>
   <script src="https://cdn.jsdelivr.net/npm/node-chatgpt@1.0.0/build/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.7.2/css/all.min.css">
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="CSS/qr.css">
   <link rel="stylesheet" href="CSS/sidebar/sb_main.css">
 
-
+  <link rel="stylesheet" href="CSS/global.css">
   <link rel="stylesheet" href="CSS/sidebar/sb_right.css">
   <link rel="stylesheet" href="CSS/sidebar/right/newRecipe.css">
   <link rel="stylesheet" href="CSS/sidebar/right/todaysRecipe.css">
@@ -52,6 +52,13 @@
         <ion-icon name="alert-circle-outline"></ion-icon>
         <h4>Bitly may show a quick preview</h4>
       </div>
+    </div>
+    <div class="logoTitle">
+      <div>
+        <img class="logo-img" id="logo" src="./IMG/Logo.png">
+        <h1>My Meal Plan</h1>
+      </div>
+      <h4>By FOOD CALENDAR COMPANY NAME HERE</h4>
     </div>
     <div class="title">
       <ion-icon name="chevron-back-outline" onclick="handleMonthOffset(-1)"></ion-icon>
@@ -87,6 +94,11 @@
         </thead>
         <tbody id="calendar-body"></tbody>
       </table>
+    </div>
+    <div class="footer">
+      <div>
+
+      </div>
     </div>
   </div>
   <div class="sidebarRight" id="sidebarR">
@@ -192,7 +204,6 @@
           onclick="genShoppingList(document.getElementById('timeframe-select').value);">Generate
           List</button>
       </div>
-
       <div class="flex-row justify-center">
         <button class="button qrGenBtn" onclick="showQRCode(true)">Generate Mobile QR Code</button>
       </div>
@@ -221,18 +232,41 @@
     <div class="settingsTab tab" id="settingsTab">
       <h2>Settings</h2>
       <div class="settingsList">
-        <div class="colorSettings">
+        <div class="colorSettings setting">
           <h3>Customize Website Colors</h3>
           <h4 style="margin: -8px 0 -2px 0;">All other colors will be automatically generated</h4>
           <div class="flex-row">
-            <input type="color" value="#ff6bc1" id="primary-color">
+            <input type="color" value="#6bb3ff" id="primary-color">
             <h3>Theme</h3>
           </div>
           <div class="flex-row">
-            <input type="color" id="text-color" value="">
+            <input type="color" id="text-color" value="#623232">
             <h3>Text Color</h3>
           </div>
         </div>
+        <!--<div class="sidebarSettings setting">
+          <h3>Customize Sidebar Width</h3>
+          <h4 style="margin: -8px 0 -2px 0;">Modifies how far each sidebar sticks out from the side</h4>
+          <div class="flex-row">
+            <select id="width-select">
+              <option value="450">Default</option>
+              <option value="400">Smaller</option>
+              <option value="500">Larger</option>
+            </select>
+            <h3>Left Sidebar</h3>
+          </div>
+          <div class="flex-row">
+            <select id="width-select">
+              <option value="450">Default</option>
+              <option value="400">Smaller</option>
+              <option value="500">Larger</option>
+            </select>
+            <h3>Right Sidebar</h3>
+          </div>
+        </div> -->
+        <button class="button btn-danger" onclick="localStorage.clear(); location.reload();">
+          Delete all save data
+        </button>
       </div>
     </div>
   </div>
