footer, more stuff

--- a/web/index.html
+++ b/web/index.html
@@ -96,8 +96,9 @@
       </table>
     </div>
     <div class="footer">
-      <div>
-
+      <div class="link" onclick="window.open('https://github.com/Dialga156b/Food-Calendar')">
+        <ion-icon name="logo-github"></ion-icon>
+        <h4>Github</h4>
       </div>
     </div>
   </div>
