QR colors, loading anims

--- a/web/index.html
+++ b/web/index.html
@@ -96,9 +96,11 @@
       </table>
     </div>
     <div class="footer">
-      <div class="link" onclick="window.open('https://github.com/Dialga156b/Food-Calendar')">
-        <ion-icon name="logo-github"></ion-icon>
-        <h4>Github</h4>
+      <div class="links">
+        <div class="link" onclick="window.open('https://github.com/Dialga156b/Food-Calendar')">
+          <ion-icon name="logo-github"></ion-icon>
+          <h4>Github</h4>
+        </div>
       </div>
     </div>
   </div>
@@ -228,6 +230,7 @@
             </div>
           </div>
         </div>
+        <ion-icon name="reload-outline" id="s-list-icon"></ion-icon>
       </div>
     </div>
     <div class="settingsTab tab" id="settingsTab">
