--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <title>Shopping List</title>
+    <script src="JS/colorMgr.js"></script>
     <script>
         function getParams() {
             const params = new URLSearchParams(window.location.search);
@@ -40,6 +41,14 @@
                 return { item_name, quantity };
             });
         }
+
+        window.addEventListener("DOMContentLoaded", () => {
+            const theme = decodeURIComponent(new URLSearchParams(location.search).get('theme'));
+            document.body.style.backdropFilter = `
+                hue-rotate(${h}deg)
+                brightness(${v / 100}) 
+                saturate(${s / 100})`;
+        });
     </script>
     <style>
         body,
@@ -59,10 +68,7 @@
             width: 100%;
             height: 100vh;
             z-index: -1;
-            background: linear-gradient(157deg,
-                    rgba(169, 195, 212, 1) 0%,
-                    rgba(211, 235, 220, 1) 50%,
-                    rgba(255, 254, 237, 1) 100%);
+            background: linear-gradient(157deg, rgb(212 169 169) 0%, rgb(235 211 221) 50%, rgb(255 237 251) 100%)
         }
 
 
