--- a/web/mobileShopping.html
+++ b/web/mobileShopping.html
@@ -248,6 +248,12 @@
             align-items: center;
             flex-direction: column;
         }
+
+        .ingredient:has(input[type="checkbox"]:checked) {
+            filter: brightness(0.85);
+            backdrop-filter: brightness(.85);
+            opacity: 0.6;
+        }
     </style>
 </head>
 
