--- a/web/index.html
+++ b/web/index.html
@@ -36,8 +36,8 @@
 <body>
   <div class="temp" id="temp">
     <div class="delete" id="delete">
-      <ion-icon name="trash-outline"></ion-icon>
-      <ion-icon name="close-outline"></ion-icon>
+      <ion-icon name="trash-outline" id="del-btn"></ion-icon>
+      <ion-icon name="close-outline" id="close-btn"></ion-icon>
     </div>
   </div>
   <div class="sidebar" id="sidebarL">
