--- a/web/index.html
+++ b/web/index.html
@@ -62,9 +62,9 @@
     <div class="logoTitle">
       <div>
         <img class="logo-img" id="logo" src="./IMG/Logo.png">
-        <h1>My Meal Plan</h1>
+        <h1>Current Meal Plan</h1>
       </div>
-      <h4>By FOOD CALENDAR COMPANY NAME HERE</h4>
+      <h4>By MyMealPrep</h4>
     </div>
     <div class="title">
       <ion-icon name="chevron-back-outline" onclick="handleMonthOffset(-1)"></ion-icon>
