--- a/web/index.html
+++ b/web/index.html
@@ -141,7 +141,7 @@
             <h4>Quality or safety not guaranteed if generated without a recipe.</h4>
           </div>
           <textarea type="text" class="recipe-gen-box" id="rdesc" name="rdesc"
-            placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the recipe book on the left sidebar."></textarea>
+            placeholder="Paste your recipe's name, instructions, and ingredients here. Based on these instructions, a new recipe will be generated and added to the recipe book. If using a link, place ONLY the link here."></textarea>
           <h3 style="margin: 5px 0 5px 0">Recipe Image (Optional)</h3>
           <textarea type="text" class="recipe-img-box" id="recipeimgbox" name="rdesc"
             placeholder="If you want, paste a (valid) IMAGE link of the recipe here."></textarea>
