--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
   </div>
   <div class="main-content">
     <div class="qr-frame" id="qr-frame">
-      <ion-icon class="qr-icon" onclick="showQRCode(false)" name="close-outline"></ion-icon>
+      <ion-icon class="qr-icon" onclick="showQRCode(false)" name="close-outline" style="z-index: 500;"></ion-icon>
       <div id="qr-container" class="qr-container">
       </div>
       <h3>Scan to view your shopping list</h3>
@@ -257,7 +257,7 @@
           <h3>Generation Settings</h3>
           <h4 style="margin: -8px 0 -2px 0;">Options having to do with recipe creation</h4>
           <div class="flex-row">
-            <input type="checkbox">
+            <input type="checkbox" class="checkbox">
             <h3>Find relevant images</h3>
           </div>
         </div>
