--- a/web/index.html
+++ b/web/index.html
@@ -157,7 +157,7 @@
           <h3 style="margin: 5px 0 5px 0">Recipe Image (Optional)</h3>
           <textarea type="text" class="recipe-img-box" id="recipeimgbox" name="rdesc"
             placeholder="If you want, paste a (valid) IMAGE link of the recipe here."></textarea>
-          <button class="gen-btn button" id="gen-btn" onclick="genRecipe()">generate recipe</button>
+          <button class="gen-btn button" id="gen-btn" onclick="genRecipe()">Generate recipe</button>
         </div>
       </div>
     </div>
