--- a/web/index.html
+++ b/web/index.html
@@ -68,8 +68,9 @@
     <div class="recipe-settings-frame" id="rs-frame" style="display: none;">
       <ion-icon class="rs-icon" onclick="showRS(false)" name="close-outline" style="z-index: 500;"></ion-icon>
       <h3 id="rs-title">Recipe Settings</h3>
-      <button class="button" onclick="deleteRecipe()" style="padding-inline: 20px;">Delete This
-        Recipe</button>
+      <button class="button" onclick="changeRecipeImg()" style="padding-inline: 20px;">Change this recipe's
+        image</button>
+      <button class="button" onclick="deleteRecipe()" style="padding-inline: 20px;">Delete this recipe</button>
     </div>
     <div class="logoTitle">
       <div>
