--- a/web/index.html
+++ b/web/index.html
@@ -204,6 +204,13 @@
                     <p>Recipe Step Description</p>
                   </div>
                 </div>
+                <div style="display: flex; justify-content: center;">
+                  <div class="td-website" id="td-site" onclick="openWebsite()">
+                    <ion-icon name="globe-outline"></ion-icon>
+                    <h4>Visit recipe website →</h4>
+                  </div>
+                </div>
+
               </div>
             </details>
           </div>
