--- a/web/index.html
+++ b/web/index.html
@@ -78,7 +78,7 @@
       <h3 id="nf-title">Change this day's note</h3>
       <h4 id="nf-name">Day of -</h4>
       <textarea id="nf-textarea"
-        placeholder="put your text here. to delete a preexisting note, keep this field blank."></textarea>
+        placeholder="put your text here. To delete a preexisting note, keep this field blank."></textarea>
       <button class="button" onclick="submitNote()" style="padding-inline: 20px;">Done</button>
     </div>
     <div class="logoTitle">
