--- a/web/index.html
+++ b/web/index.html
@@ -71,6 +71,9 @@
       <h4 id="rs-name">"recipe name"</h4>
       <button class="button" onclick="changeRecipeImg()" style="padding-inline: 20px;">Change this recipe's
         image</button>
+      <button class="button" id="btn-web" onclick="website()" style="padding-inline: 20px; display: none;">Go to this
+        recipe's
+        website</button>
       <button class="button" onclick="deleteRecipe()" style="padding-inline: 20px;">Delete this recipe</button>
     </div>
     <div class="note-frame" id="note-frame" style="display: none;">
