--- a/web/index.html
+++ b/web/index.html
@@ -74,6 +74,9 @@
       <button class="button" id="btn-web" onclick="website()" style="padding-inline: 20px; display: none;">Go to this
         recipe's
         website</button>
+      <button class="button" id="btn-add-web" onclick="addRecipeWebsite()"
+        style="padding-inline: 20px; display: none;">Add an
+        associated website to this recipe</button>
       <button class="button" onclick="deleteRecipe()" style="padding-inline: 20px;">Delete this recipe</button>
     </div>
     <div class="note-frame" id="note-frame" style="display: none;">
