--- a/web/index.html
+++ b/web/index.html
@@ -174,7 +174,7 @@
       </div>
     </div>
     <div class="todaysRecipeTab tab" id="todaysRecipeTab">
-      <div>
+      <div style="height: inherit; display: flex; flex-direction: column;">
         <h2 id="tr-header">Today</h2>
         <div class="recipe-scroll" id="recipe-scroll">
           <div class="tr-template" id="tr-template">
@@ -230,7 +230,6 @@
           </div>
         </div>
       </div>
-
       <div class="recipe-footer">
         <ion-icon name="sparkles"></ion-icon>
         <h4>
