move website btn up

--- a/web/index.html
+++ b/web/index.html
@@ -206,6 +206,12 @@
                     <p id="f-serv">2 - 5</p>
                   </div>
                 </div>
+                <div style="display: flex; justify-content: center;">
+                  <div class="td-website" id="td-site" onclick="openWebsite()">
+                    <ion-icon name="globe-outline"></ion-icon>
+                    <h4>Visit this recipe's website →</h4>
+                  </div>
+                </div>
                 <div class="ingredients">
                   <h3>Ingredients</h3>
                   <ul id="ingredients">
@@ -218,13 +224,6 @@
                     <p>Recipe Step Description</p>
                   </div>
                 </div>
-                <div style="display: flex; justify-content: center;">
-                  <div class="td-website" id="td-site" onclick="openWebsite()">
-                    <ion-icon name="globe-outline"></ion-icon>
-                    <h4>Visit recipe website →</h4>
-                  </div>
-                </div>
-
               </div>
             </details>
           </div>
