--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
       <ion-icon name="close-outline" id="close-btn"></ion-icon>
     </div>
   </div>
-  <div class="sidebar" id="sidebarL">
+  <div class="sidebar print-hide" id="sidebarL">
     <div class="book-title">
       <ion-icon name="book"></ion-icon>
       <h2>Recipe Book</h2>
@@ -91,7 +91,7 @@
         placeholder="put your text here. To delete a preexisting note, keep this field blank."></textarea>
       <button class="button" onclick="submitNote()" style="padding-inline: 20px;">Done</button>
     </div>
-    <div class="logoTitle">
+    <div class="logoTitle print-hide" id="print-hide">
       <div>
         <img class="logo-img" id="logo" src="./IMG/Logo.png">
         <h1>Current Meal Plan</h1>
@@ -99,9 +99,9 @@
     </div>
     <div class="title">
       <div class="title-row">
-        <ion-icon name="chevron-back-outline" onclick="handleMonthOffset(-1)"></ion-icon>
+        <ion-icon name="chevron-back-outline" class="print-hide" onclick="handleMonthOffset(-1)"></ion-icon>
         <h3 id="monthName">May 2025</h3>
-        <ion-icon name="chevron-forward-outline" onclick="handleMonthOffset(1)"></ion-icon>
+        <ion-icon name="chevron-forward-outline" class="print-hide" onclick="handleMonthOffset(1)"></ion-icon>
       </div>
       <h4 id="year" class="year">2025</h4>
     </div>
@@ -136,7 +136,7 @@
         <tbody id="calendar-body"></tbody>
       </table>
     </div>
-    <div class="footer">
+    <div class="footer print-hide">
       <div class="links">
         <div class="link" onclick="window.open('https://github.com/Dialga156b/Food-Calendar')">
           <ion-icon name="logo-github"></ion-icon>
@@ -145,7 +145,7 @@
       </div>
     </div>
   </div>
-  <div class="sidebarRight" id="sidebarR">
+  <div class="sidebarRight print-hide" id="sidebarR">
     <div class="tab-list" id="tab-list">
       <div class="flag-right" id="rToggle" onclick="toggleRightSidebar()">
         <ion-icon name="chevron-back-sharp" id="rightSidebarIcon" class="sidebar-hide"></ion-icon>
@@ -323,6 +323,7 @@
   <script type="module" src="JS/shoppinglist.js"></script>
   <script type="module" src="JS/qr.js"></script>
   <script src="JS/colorMgr.js"></script>
+  <script src="JS/print.js"></script>
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
